--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
+      <!-在每一页显示一些对开发有帮助的信息->
       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
