--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,8 @@
     <div class="navbar-inner">
         <div class="container">
         <%= link_to "sample app", root_path, id: "logo" %>
-            <nav>
-                <ul class="nav pull-right">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <ul class="nav navbar-nav navbar-right">
                     <li><%= link_to "Home",     root_path %></li>
                     <li><%= link_to "Help",     help_path %></li>
                     <% if signed_in? %>
